@@ -3,6 +3,20 @@
 class SiteController extends CController
 {
 	/**
+	 * Declares class-based actions.
+	 */
+	public function actions()
+	{
+		return array(
+			// captcha action renders the CAPTCHA image
+			'captcha'=>array(
+				'class'=>'CCaptchaAction',
+				'backColor'=>0xEBF4FB,
+			),
+		);
+	}
+
+	/**
 	 * This is the default 'index' action that is invoked
 	 * when an action is not explicitly requested by users.
 	 */
@@ -11,5 +25,33 @@ class SiteController extends CController
 		// renders the view file 'protected/views/site/index.php'
 		// using the default layout 'protected/views/layouts/main.php'
 		$this->render('index');
+	}
+
+	/**
+	 * Displays a login form to login a user.
+	 */
+	public function actionLogin()
+	{
+		$user=new LoginForm;
+		if(Yii::app()->request->isPostRequest)
+		{
+			// collect user input data
+			if(isset($_POST['LoginForm']))
+				$user->setAttributes($_POST['LoginForm']);
+			// validate user input and redirect to previous page if valid
+			if($user->validate())
+				$this->redirect(Yii::app()->user->returnUrl);
+		}
+		// display the login form
+		$this->render('login',array('user'=>$user));
+	}
+
+	/**
+	 * Logout the current user and redirect to homepage.
+	 */
+	public function actionLogout()
+	{
+		Yii::app()->user->logout();
+		$this->redirect(Yii::app()->homeUrl);
 	}
 }
