@@ -17,8 +17,8 @@
 <?php $this->widget('application.components.MainMenu',array(
 	'items'=>array(
 		array('label'=>'Home', 'url'=>array('site/index')),
-		array('label'=>'Login', 'url'=>array('user/login'), 'visible'=>Yii::app()->user->isGuest),
-		array('label'=>'Logout', 'url'=>array('user/logout'), 'visible'=>!Yii::app()->user->isGuest)
+		array('label'=>'Login', 'url'=>array('site/login'), 'visible'=>Yii::app()->user->isGuest),
+		array('label'=>'Logout', 'url'=>array('site/logout'), 'visible'=>!Yii::app()->user->isGuest)
 	),
 )); ?>
 </div><!-- mainmenu -->
